--- a/eShop.Web.CustomerPortal/Pages/ViewProductComp.razor
+++ b/eShop.Web.CustomerPortal/Pages/ViewProductComp.razor
@@ -1,24 +1,24 @@
 ﻿@page "/product/{productId:int}"
 @*image, brand, name, price, addProductToCart(), BackToProducts()*@
 
-
 @inject IViewProductUseCase viewProductUseCase
+@inject IAddProductUseCase addProductUseCase
 
 <h4>Product Details</h4>
 <br />
 
-@if (Product is not null)
+@if (product is not null)
 {
     <div class="card" style="width: 30rem;">
-        <img src="@Product.ImageLink" class="card-img-top w-50">
+        <img src="@product.ImageLink" class="card-img-top w-50">
         <div class="card-body">
-            <h5 class="card-title">@Product.Name</h5>
-            <p class="text-muted">@Product.Brand</p>
+            <h5 class="card-title">@product.Name</h5>
+            <p class="text-muted">@product.Brand</p>
             <hr />
-            <p>Price: &nbsp; <span class="text-danger">@Product.Price.ToString("c")</span></p>
-            <p class="car-text">@Product.Description</p>
+            <p>Price: &nbsp; <span class="text-danger">@product.Price.ToString("c")</span></p>
+            <p class="car-text">@product.Description</p>
         </div>
-        <a href="/" class="btn btn-primary">Add To Cart</a>
+        <a href="/" class="btn btn-primary" @onclick="AddProductToShoppingCart">Add To Cart</a>
     </div>
     <br />
     <a href="/" class="btn btn-outline-secondary">Back To Products</a>
@@ -29,7 +29,7 @@ else
 }
 
 @code{
-    private Product Product;
+    private Product product;
 
     [Parameter]
     public int productId { get; set; }
@@ -37,7 +37,11 @@ else
     protected override void OnInitialized()
     {
         if (productId > 0)
-            Product = viewProductUseCase.Execute(productId);
+            product = viewProductUseCase.Execute(productId);
     }
 
+    public async Task AddProductToShoppingCart()
+    {
+        await addProductUseCase.ExecuteAsync(product);
+    }
 }
