--- a/eShop.Web.CustomerPortal/_Imports.razor
+++ b/eShop.Web.CustomerPortal/_Imports.razor
@@ -4,3 +4,4 @@
 @using eShop.CoreBusiness.Models
 @using eShop.UseCases.CustomerPortal.SearchProductsUseCaseScreen
 @using eShop.UseCases.CustomerPortal.ViewProductUseCaseScreen
+@using eShop.UseCases.CustomerPortal.ShoppingCartScreen.Interfaces 
