--- a/eShop.Web.CustomerPortal/Pages/ShoppingCartComp.razor
+++ b/eShop.Web.CustomerPortal/Pages/ShoppingCartComp.razor
@@ -2,54 +2,43 @@
 
 @inject IViewShoppingCartUseCase viewShoppingCartUseCase
 
-<h3>Shopping Cart</h3>
-<br />
 
-@if (Order != null && Order.LineItems != null && Order.LineItems.Count > 0)
+<h4>Shopping Cart</h4>
+<br>
+
+
+
+@if (order != null && order.LineItems != null && order.LineItems.Count > 0)
 {
-    <div class="row">
+    <div>
         <div class="col">
-            <div class="row">
-                @foreach (var item in Order.LineItems)
-                {
-                    <LineItemComp LineItem="item"
-                                  OnDeleteProduct="HandleDeleteProduct"
-                                  OnUpdateProduct="HandleUpdateProduct" />
-                    <hr />
-                }
-            </div>
+            @foreach (var item in order.LineItems)
+            {
+                <LineItemComp LineItem="item" />
+            }
         </div>
-
         <div class="col">
-            @*<OrderSummaryComp />*@
+            <OrderSumaryComp />
         </div>
     </div>
 }
+
 else
 {
-    <p>There are no items in the shopping Cart</p>
+    <p>There is no LineItem to display</p>
 }
 
-@code{
-    private Order Order;
+
+
+@code {
+    private Order order;
 
     protected override async Task OnAfterRenderAsync(bool firstRender)
     {
         if (firstRender)
         {
-            Order = await viewShoppingCartUseCase.ExecuteAsync();
+            order = await viewShoppingCartUseCase.ExecuteAsync();
             StateHasChanged();
         }
     }
-
-    public void HandleDeleteProduct(Order order)
-    {
-        this.Order = order;
-    }
-
-    public void HandleUpdateProduct(Order order)
-    {
-        this.Order = order;
-    }
-
 }
