--- a/eShop.Web.CustomerPortal/Pages/ViewProductComp.razor
+++ b/eShop.Web.CustomerPortal/Pages/ViewProductComp.razor
@@ -4,31 +4,34 @@
 @inject IViewProductUseCase viewProductUseCase
 @inject IAddProductToCartUseCase addProductToCartUseCase 
 
-<h4>Product Details</h4>
+
+<h4 class="p-3">Product Details</h4>
 <br />
 
 @if (product is not null)
 {
-    <div class="card" style="width: 30rem;">
-        <img src="@product.ImageLink" class="card-img-top w-50">
-        <div class="card-body">
-            <h5 class="card-title">@product.Name</h5>
-            <p class="text-muted">@product.Brand</p>
-            <hr />
-            <p>Price: &nbsp; <span class="text-danger">@product.Price.ToString("c")</span></p>
-            <p class="car-text">@product.Description</p>
+    <div class="d-flex justify-content-center align-items-center">
+        <div class="card" style="width: 50rem;">
+            <div class="text-center">
+                <img src="@product.ImageLink" class="card-img-top w-25">
+            </div>
+            <div class="card-body">
+                <h5 class="card-title">@product.Name</h5>
+                <p class="text-muted">@product.Brand</p>
+                <hr />
+                <p>Price: &nbsp; <span class="text-danger">@product.Price.ToString("c")</span></p>
+                <p class="car-text">@product.Description</p>
+            </div>
+            <a href="/" class="btn btn-primary" @onclick="AddProductToCart">Add To Cart</a>
         </div>
-        <a href="/" class="btn btn-primary" @onclick="AddProductToCart">Add To Cart</a>
     </div>
-    <br />
-    <a href="/" class="btn btn-outline-secondary">Back To Products</a>
 }
 else
 {
     <p>Loading...</p>
 }
 
-@code{
+@code {
     private Product product;
 
     [Parameter]
@@ -40,7 +43,7 @@ else
             product = viewProductUseCase.Execute(productId);
     }
 
-    public void AddProductToCart()
+    private void AddProductToCart()
     {
         addProductToCartUseCase.Execute(product);
     }
