--- a/eShop.Web/Shared/MainLayout.razor
+++ b/eShop.Web/Shared/MainLayout.razor
@@ -4,7 +4,7 @@
     <TopNavBar/>
 
     <div class="main">
-        <div class="content px-4 py-1">
+        <div class="container">
             @Body
         </div>
     </div>
