--- a/eShop.Web/Shared/TopNavBar.razor
+++ b/eShop.Web/Shared/TopNavBar.razor
@@ -1,5 +1,10 @@
-﻿<nav class="navbar navbar-light bg-light">
-    <div class="container-fluid">
+﻿<nav class="navbar navbar-light bg-light px-3 mb-2">
+    <div class="d-flex justify-content-start">
         <a class="navbar-brand" href="/products">Home</a>
     </div>
+    <div class="d-flex justify-content-end">
+        <CartComp />
+    </div>
 </nav>
+
+
