--- a/eShop.Web.CustomerPortal/_Imports.razor
+++ b/eShop.Web.CustomerPortal/_Imports.razor
@@ -1,8 +1,14 @@
 ﻿@using Microsoft.AspNetCore.Components.Web
 @using eShop.Web.CustomerPortal.Components
+@using Microsoft.AspNetCore.Components.Forms
+
 
 @using eShop.CoreBusiness.Models
 @using eShop.UseCases.CustomerPortal.SearchProductsUseCaseScreen
 @using eShop.UseCases.CustomerPortal.ViewProductUseCaseScreen
 @using eShop.UseCases.CustomerPortal.ShoppingCartScreen.Interfaces
+
+@using eShop.Web.CustomerPortal.ViewModels
+
+
 
