--- a/eShop.Web.AdminPortal/_Imports.razor
+++ b/eShop.Web.AdminPortal/_Imports.razor
@@ -1,1 +1,10 @@
 ﻿@using Microsoft.AspNetCore.Components.Web
+@using Microsoft.AspNetCore.Components.Routing
+
+@using eShop.CoreBusiness.Models
+
+@using eShop.UseCases.AdminPortal.OrderDetailScreen 
+@using eShop.UseCases.AdminPortal.OutStandingOrdersScreen
+@using eShop.UseCases.AdminPortal.ProcessedOrdersScreen 
+
+
