--- a/eShop.Web.CustomerPortal/Components/CustomerFormComp.razor
+++ b/eShop.Web.CustomerPortal/Components/CustomerFormComp.razor
@@ -45,8 +45,8 @@
         Customer = new();
     }
 
-    private async void HandleCustomerSubmited()
+    private void HandleCustomerSubmited()
     {
-        await OnCustomerSubmited.InvokeAsync(Customer);
+        OnCustomerSubmited.InvokeAsync(Customer);
     }
 }
