--- a/eShop.Web.CustomerPortal/_Imports.razor
+++ b/eShop.Web.CustomerPortal/_Imports.razor
@@ -9,6 +9,7 @@
 @using eShop.UseCases.CustomerPortal.ShoppingCartScreen.Interfaces
 
 @using eShop.Web.CustomerPortal.ViewModels
+@using eShop.UseCases.CustomerPortal.OrderConfirmationScreen
 
 
 
