--- a/eShop.Web.CustomerPortal/Pages/PlaceOrderComp.razor
+++ b/eShop.Web.CustomerPortal/Pages/PlaceOrderComp.razor
@@ -8,8 +8,8 @@
 
 @if (order != null && order.LineItems != null && order.LineItems.Count > 0)
 {
-    <div class="row">
-        <div class="col">
+    <div class="row text-ceter mt-4">
+        <div class="col col-lg-8">
             <CustomerFormComp OnCustomerSubmited="HandleCustomerSubmited" />
         </div>
         <div class="col">
@@ -49,8 +49,8 @@
         }
         else
         {
-            //navManager.NavigateTo("/");
-            orderPlaced = "Order has been placed";
+            navManager.NavigateTo($"/confirmorder/{uniqueId}");
+
         }
     }
 }
