--- a/eShop.Web/Shared/CartComp.razor
+++ b/eShop.Web/Shared/CartComp.razor
@@ -15,14 +15,18 @@
 
     protected override async Task OnAfterRenderAsync(bool firstRender)
     {
-        stateStore.AddStateChangeListener(HandleStateLineCount);
-        lineItemsCount = await stateStore.GetItemsCount();
-        StateHasChanged();
+        if(firstRender)
+        {
+            stateStore.AddStateChangeListener(HandleStateLineCount);
+            lineItemsCount = await stateStore.GetItemsCount();
+            StateHasChanged();
+        }
     }
 
     private async void HandleStateLineCount()
     {
-        lineItemsCount = await stateStore.GetItemsCount();  
+        lineItemsCount = await stateStore.GetItemsCount();
+        StateHasChanged();
     }
 
     public void Dispose()
