--- a/eShop.Web/_Imports.razor
+++ b/eShop.Web/_Imports.razor
@@ -11,3 +11,4 @@
 
 @using eShop.CoreBusiness.Models 
 @using eShop.UseCases.CustomerPortal.PluginInterfaces.StateStore
+@using eShop.Web.Common.Components
