--- a/eShop.Web.AdminPortal/Components/OrderItemComp.razor
+++ b/eShop.Web.AdminPortal/Components/OrderItemComp.razor
@@ -1,1 +1,33 @@
-﻿
+﻿@if (Order != null)
+{
+    <tr>
+        <td>
+            @if (Order.DatePlaced.HasValue)
+            {
+                @Order.DatePlaced.Value.ToShortDateString()
+            }
+        </td>
+        <td>
+            @if (!Order.DateProcessed.HasValue)
+            {
+                <a href="@($"/orderdetailed/{Order.OrderId}")">
+                    @Order.OrderId
+                </a>
+            }
+            else
+            {
+                @Order.OrderId
+            }
+        </td>
+        <td>@Order.CustomerCountry</td>
+        <td>@Order.CustomerStateProvince</td>
+        <td>@Order.CustomerCity</td>
+        <td>@Order.CustomerName</td>
+    </tr>
+}
+
+
+@code {
+    [Parameter]
+    public Order Order { get; set; }
+}
