--- a/eShop.Web.AdminPortal/_Imports.razor
+++ b/eShop.Web.AdminPortal/_Imports.razor
@@ -1,10 +1,13 @@
 ﻿@using Microsoft.AspNetCore.Components.Web
 @using Microsoft.AspNetCore.Components.Routing
+@using Microsoft.AspNetCore.Authorization
 
 @using eShop.CoreBusiness.Models
 
 @using eShop.UseCases.AdminPortal.OrderDetailScreen 
 @using eShop.UseCases.AdminPortal.OutStandingOrdersScreen
 @using eShop.UseCases.AdminPortal.ProcessedOrdersScreen 
+
+@using eShop.Web.AdminPortal.Components
 
 
