--- a/eShop.Web/Shared/TopNavBar.razor
+++ b/eShop.Web/Shared/TopNavBar.razor
@@ -1,7 +1,10 @@
 ﻿<nav class="navbar navbar-light bg-light px-3 mb-2">
     <div class="d-flex justify-content-start">
         <a class="navbar-brand" href="/products">Home</a>
+        <a class="navbar-brand" href="/outstandingorders">Outstanding Orders</a>
+        <a class="navbar-brand" href="/processedorders">Processed Orders</a>
     </div>
+
     <div class="d-flex justify-content-end">
         <CartComp />
     </div>
